2016-12-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Apply hardening flags when building the "Release"
	build type.

2016-12-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/cvss.h: Remove declaration of cvss_as_str as it was removed
	from cvss.c in r14975.

2016-12-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/cvss.c: Format according to coding style. Command was 'indent
	--no-tabs --ignore-newlines -l 80'.

2016-12-05  Michael Wiegand <michael.wiegand@greenbone.net>

	Minor documentation fixes.

	* INSTALL: Refer to more sensible packages in 'apt-get' line.

	* README: Remove trailing whitespace.

2016-12-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt, doc/CMakeLists.txt: Fix typos.

2016-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/cvss.c: Rename unneeded include.

2016-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Starting module "gvm-libs".

	* doc/Doxyfile.in, doc/Doxyfile_full.in, doc/CMakeLists.txt,
	base/CMakeLists.txt, base/array.c, base/array.h, base/cvss.c,
	base/cvss.h, base/pidfile.c, base/pidfile.h, gvm_cmake_macros,
	README, INSTALL, CMakeLists.txt, VERSION.in, libgvm_base.pc.in,
	ChangeLog, COPYING: New.