@@ -1,3 +1,9 @@
+2016-12-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* base/fileutils.c, base/fileutils.h: New.
+
+	* base/CMakeLists.txt: Handle new module.
+
 2016-12-08  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* CMakeLists.txt: Apply hardening flags when building the "Release"
